--- a/css/custom.css
+++ b/css/custom.css
@@ -25,10 +25,10 @@ html, body, main {
 .navbar-action .btn {
     font-size: 13px;
     font-weight: 600;
-    min-width: 80px;
+    min-width: 76px;
     height: 32px;
     line-height: 18px;
-    padding: 0;
+    padding: 0 13px;
 }
 
 .navbar-action .btn.btn-secondary {
@@ -96,6 +96,7 @@ html, body, main {
 
 .ui-form-signup {
     max-width: 460px;
+    margin: 20px 22px 10px 22px;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -125,6 +126,8 @@ html, body, main {
 .ui-form-signup input.form-control {
     font-family: 'Raleway', sans-serif;
     height: 44px;
+    font-weight: 500;
+    color: #2d3235;
 }
 
 .ui-form-signup input.form-control:focus {
@@ -158,7 +161,8 @@ html, body, main {
 .ui-form-signup .btn-outline-light {
     border-color: #ced4da;
     width: 130px;
-    color: #2d3235;
+    color: #6d6d6d;
+    font-weight: 500;
 }
 
 .ui-form-signup .btn-primary {
@@ -208,7 +212,22 @@ html, body, main {
 }
 
 /*Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) {
+@media (max-width: 576px) {
+    .navbar {
+        background-color: #FFFFFF;
+    }
+
+    .ui-form-signup .btn-outline-light {
+        width: 90px;
+    }
+
+    .ui-form-signup h1 {
+        margin-top: 60px;
+    }
+
+    .navbar-action .btn.btn-light img {
+        margin-right: 0;
+    }
 }
 
 /*btn #3f464f*/
